fixes the ability to control overflows more easily

--- a/src/components/Switcher/Switcher.scss
+++ b/src/components/Switcher/Switcher.scss
@@ -1,3 +1,8 @@
 @import "../../styles/Variables.scss";
 
 /** Switcher Component Styles */
+.mainsail-switcher {
+    /* These properties are intended to be overridden by component props which utilize util classes */
+    overflow-y: auto;
+    overflow-x: auto;
+}
